--- a/package.json
+++ b/package.json
@@ -13,15 +13,27 @@
   "author": "Sandeep Raveesh",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/translate": "^4.1.3",
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.3",
+    "app-root-path": "^2.2.1",
+    "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "ejs": "^2.6.2",
     "express": "^4.16.3",
+    "express-fileupload": "^1.1.6-alpha.4",
+    "formidable": "^1.2.1",
+    "line-reader": "^0.4.0",
+    "lodash": "^4.17.15",
+    "mssql": "^5.1.0",
+    "pg": "^7.12.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "semantic-ui-react": "^0.88.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -38,7 +50,7 @@
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "file-loader": "^3.0.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.17.3",
     "style-loader": "^0.23.0",
