--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.3",
+    "@nivo/pie": "^0.59.1",
     "app-root-path": "^2.2.1",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
