--- a/package.json
+++ b/package.json
@@ -13,51 +13,52 @@
   "author": "Sandeep Raveesh",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/translate": "^4.1.3",
-    "@material-ui/core": "^4.4.0",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.3.3",
+    "@google-cloud/translate": "^4.2.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/styles": "^4.11.5",
     "@nivo/pie": "^0.59.1",
     "app-root-path": "^2.2.1",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^4.3.1",
-    "ejs": "^2.6.2",
-    "express": "^4.16.3",
-    "express-fileupload": "^1.1.6-alpha.4",
-    "formidable": "^1.2.1",
+    "body-parser": "^1.20.0",
+    "bootstrap": "^4.6.1",
+    "cors": "^2.8.5",
+    "ejs": "^2.7.4",
+    "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
+    "formidable": "^1.2.6",
     "line-reader": "^0.4.0",
-    "lodash": "^4.17.15",
-    "mssql": "^5.1.0",
-    "pg": "^7.12.1",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-router-dom": "^5.0.1",
-    "semantic-ui-react": "^0.88.1"
+    "lodash": "^4.17.21",
+    "mssql": "^5.1.5",
+    "pg": "^8.7.3",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.3.3",
+    "semantic-ui-react": "^0.88.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.0",
-    "babel-loader": "^8.0.0",
+    "@babel/core": "^7.18.5",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^1.0.0",
     "concurrently": "^4.0.0",
     "css-loader": "^2.0.0",
     "eslint": "^5.0.0",
     "eslint-config-airbnb": "^17.0.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-react": "^7.30.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.17.3",
+    "nodemon": "^1.19.4",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.3"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.3"
   }
 }
