--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "formidable": "^1.2.6",
     "line-reader": "^0.4.0",
     "lodash": "^4.17.21",
     "mssql": "^9.1.1",
